--- a/frontend_options/package.json
+++ b/frontend_options/package.json
@@ -2,6 +2,7 @@
   "name": "frontend_options",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/static/react",
   "dependencies": {
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
