--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "antd": "^4.15.5",
+    "bootstrap": "^4.6.0",
+    "react-bootstrap": "^1.6.0",
     "react-icons": "^4.2.0"
   }
 }
