add firebase authentification + update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,25 @@ MigrationBackup/
 chart_concept.png
 *.chunk.js
 *.chunk.js.*
+flask-backend/templates/index.html
+flask-backend/static/react/static/css/main.c0b9a816.chunk.css.map
+flask-backend/static/react/static/css/main.c0b9a816.chunk.css
+flask-backend/static/react/static/css/main.557eefb3.chunk.css.map
+flask-backend/static/react/static/css/main.557eefb3.chunk.css
+flask-backend/static/react/js/runtime-main.c911c51c.js.map
+flask-backend/static/react/js/runtime-main.c911c51c.js
+flask-backend/static/react/js/runtime-main.193ff6ea.js.map
+flask-backend/static/react/js/runtime-main.193ff6ea.js
+flask-backend/static/react/asset-manifest.json
+flask-backend/templates/index.html
+flask-backend/static/react/static/css/main.557eefb3.chunk.css.map
+flask-backend/static/react/static/css/main.557eefb3.chunk.css
+flask-backend/static/react/js/runtime-main.193ff6ea.js.map
+flask-backend/static/react/js/runtime-main.193ff6ea.js
+flask-backend/static/react/asset-manifest.json
+flask-backend/static/react/asset-manifest.json
+flask-backend/static/react/js/runtime-main.193ff6ea.js
+flask-backend/static/react/js/runtime-main.193ff6ea.js.map
+flask-backend/static/react/static/css/main.557eefb3.chunk.css
+flask-backend/static/react/static/css/main.557eefb3.chunk.css.map
+flask-backend/templates/index.html
